WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147917
Try to fix the EFL build after
r188279
https://bugs.webkit.org/show_bug.cgi?id=147917
Summary
Try to fix the EFL build after r188279
Hunseop Jeong
Reported
2015-08-11 17:58:19 PDT
https://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2/builds/23818/steps/compile-webkit/logs/stdio
\ ../../Source/WebKit2/UIProcess/efl/PagePolicyClientEfl.cpp: In constructor ‘WebKit::PagePolicyClientEfl::PagePolicyClientEfl(EwkView*)’: ../../Source/WebKit2/UIProcess/efl/PagePolicyClientEfl.cpp:109:37: error: ‘WKPagePolicyClient’ was not declared in this scope memset(&policyClient, 0, sizeof(WKPagePolicyClient)); ^ ../../Source/WebKit2/UIProcess/efl/PageLoadClientEfl.cpp: In constructor ‘WebKit::PageLoadClientEfl::PageLoadClientEfl(EwkView*)’: ../../Source/WebKit2/UIProcess/efl/PageLoadClientEfl.cpp:162:35: error: ‘WKPageLoaderClient’ was not declared in this scope
Attachments
Patch
(2.27 KB, patch)
2015-08-11 18:04 PDT
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hunseop Jeong
Comment 1
2015-08-11 18:04:19 PDT
Created
attachment 258789
[details]
Patch
Gyuyoung Kim
Comment 2
2015-08-11 18:46:27 PDT
Comment on
attachment 258789
[details]
Patch Clearing flags on attachment: 258789 Committed
r188317
: <
http://trac.webkit.org/changeset/188317
>
Gyuyoung Kim
Comment 3
2015-08-11 18:46:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug