Try to fix the EFL build after r188279 https://bugs.webkit.org/show_bug.cgi?id=147917

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-08-11
Reviewed by Gyuyoung Kim.

Replaced the WKPageLoaderClient with variable name because it is removed in r188279.

* UIProcess/efl/PageLoadClientEfl.cpp:
(WebKit::PageLoadClientEfl::PageLoadClientEfl):
* UIProcess/efl/PagePolicyClientEfl.cpp:
(WebKit::PagePolicyClientEfl::PagePolicyClientEfl):

Canonical link: https://commits.webkit.org/166020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188317 268f45cc-cd09-0410-ab3c-d52691b4dbfc